# Dynamol

./: .gitignore  CMakeLists.txt  dynamol.h
Big Numbers/: bigFloat.c  bigInt.c  bigNums.h  bigNums_func.h
Calculation Algorithms/: calculation.h
Calculation Algorithms/Headers/: div.h  mul.h  num_theory.h  pow_root.h  singleLimb.h
Calculation Algorithms/Source Codes/: div.c  mul.c  num_theory.c  pow_root.c  singleLimb.c
Headers/: calculation.h  singleLimb.h
Headers/Big Data Types/: bigFloat.h  bigInt.h
Headers/Calculation Algorithms/: div.h  mul.h  num_theory.h  pow_root.h  singleLimb.h
Headers/Type Headers/: bigNums_func.h
Source Code/: bigFloat.c  bigInt.c  dynamicInt.c  singleLimb.c  staticInt.c
Source Code/Big Data Types/: bigInt.c
Source Code/Calculation Algorithms/: div.c  singleLimb.c
Static Numbers/: staticFloat.c
big_numbers/: _bigint.h  bigInt.c  bigInt_func.h  bigInt_io.c  bigNums.h  bigNums_func.h  bigNums_io.h  big_numbers.h
calculation_algorithms/: calculation.h
calculation_algorithms/Headers/: div.h  mul.h  num_theory.h  pow_root.h
calculation_algorithms/Source Codes/: div.c  mul.c  num_theory.c  pow_root.c
calculation_algorithms/header/: div.h  mod.h  mul.h  num_theory.h  pow_root.h
calculation_algorithms/src/: div.c  mod.c  mul.c  num_theory.c  pow_root.c
internal_utils/: bigNum_utils.c  misc_utils.c  singleLimb.c  str_parse.c  util.h
intrinsics/: intrinsics.h  limb_math.c  limb_math.h
sconfigs/: arena.h  dnml_status.h  numeric_config.h
settings/: dnml_status.h  numeric_config.h  settings.h
system/: arch.h  compiler.h  include.h  numeric_config.h
zbuild/: CMakeCache.txt  Makefile  bigInt  bigInt_casual_comp  bigInt_io  bigInt_numeric  cmake_install.cmake
ztest/: main.c
